# chordmate-rs

./: .env  .gitignore  Cargo.toml  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/db/: docker-compose.yml
backend/migrations/: V1__create_tables.sql  V2__create_songs.sql  V3__no_optional_text.sql
backend/src/: arguments.rs  database.rs  database_connection.rs  lib.rs  main.rs  ql_mutation.rs  ql_query.rs  song.rs  spotify.rs  spotify_track.rs
frontend/: App.tsx  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  apollo.ts  graphql.ts  index.tsx  spotifyoauth.ts
frontend/src/components/: About.tsx  Editor.css  Editor.tsx  SongDetail.css  SongDetail.module.css  SongDetail.tsx  SongForm.tsx  SongManager.tsx  SongsList.tsx  SongsManager.tsx  SpotifyPlayer.module.css  SpotifyPlayer.tsx  SpotifySearchModal.module.css  SpotifySearchModal.tsx
frontend/src/hooks/: useAccessToken.ts  useDebounce.ts  useSong.ts  useSpotifyPlayer.ts  useSystemTheme.ts  useTrackInfo.ts
frontend/src/types/: GetSongData.ts  GetSongsData.ts  Song.ts  SpotifyTrack.ts  env.d.ts  global.d.ts
src/: database.rs  main.rs
