[package]
name = "chordmate"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
dotenvy = "0.15"
futures = "0.3.31"
juniper = { version = "0.17", default-features = false }
juniper_axum = { version = "0.3.0", features = ["subscriptions"] }
juniper_graphql_ws = { version = "0.5", features = ["graphql-transport-ws"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.15"
deadpool-postgres = "0.14.1"
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
deadpool = "0.12.3"
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0"
log = "0.4.28"
simple_logger = "5.1.0"
clap = { version = "4.5.54", features = ["derive", "env"] }
